@@ -4,6 +4,11 @@ import com.placementgo.backend.referral.dto.ReferralTemplateResponse;
 import com.placementgo.backend.referral.repository.ReferralTemplateRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
+
+import com.placementgo.backend.referral.entity.ReferralTemplate;
 
 import java.util.List;
 import java.util.UUID;
@@ -12,16 +17,19 @@ import java.util.UUID;
 @RequiredArgsConstructor
 public class ReferralTemplateService {
 
-    private final ReferralTemplateRepository repo;
+    private final ReferralTemplateRepository templateRepository;
 
     public List<ReferralTemplateResponse> getTemplates(UUID referralId) {
-        return repo.findByReferralRequestId(referralId)
-                .stream()
+
+        List<ReferralTemplate> templates =
+                templateRepository.findByReferralId(referralId);
+
+        return templates.stream()
                 .map(t -> ReferralTemplateResponse.builder()
                         .type(t.getType().name())
                         .message(t.getMessage())
                         .version(t.getVersion())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
     }
 }
